# modGED_computations

./: .gitignore  CMakeLists.txt  FindGUROBI.cmake  README.md
include/: binary_io.h  distance.h  distance_lin.h  graph.hpp  graph_boost.h  hierachicalClustering3.h  modGED.h  modGED.hpp  plots_and_stats.h  shapefile_io_operations.h
src/: binary_io.cpp  distance.cpp  distance_lin.cpp  graph.cpp  hierachicalClustering3.cpp  main.cpp  modGED.cpp  shapefile_io_operations.cpp  test_main.cpp
